<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="user">USER</string>
    <string name="user_gmail_com">User@gmail.com</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="view_more">view more</string>
    <string name="_10_weekend_delicious_ndinner_recipies">Weekend Healthy and Delicious \nFood Recipies</string>
    <string name="your_favourite_and_tasty_food_is_here">your favourite and tasty food is here!</string>
    <string name="featured_recipe">Featured Recipe</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>

</resources>