<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/baseline_all_inclusive_24"
            android:title="@string/daily_meal" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/featured_recipe" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/my_cart"/>
    </group>
</menu>